# questionnaire-backend

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6dcb37721b0e_initial.py  a1b2c3d4e5f6_add_message_ids_to_push_send_events.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  devices.py  history.py  messages.py  router.py  topics.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  admin.py  device.py  send_event.py  topic.py
backend/app/repositories/: device.py
backend/app/schemas/: __init__.py  admin.py  auth.py  common.py  device.py  history.py  message.py  topic.py
backend/app/services/: fcm.py  sender.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_db_conn.py  test_devices.py  test_fcm.py  test_health.py  test_history.py  test_integration.py  test_schemas.py  test_security.py  test_sender.py  test_topics.py
docs/: api-contract.md  client-integration.md  firebase-setup.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  setupTests.ts
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx  ToastContext.tsx
frontend/src/pages/: ComposePage.tsx  DashboardPage.tsx  DevicesPage.tsx  HistoryPage.tsx  LoginPage.tsx  SettingsPage.tsx  TopicsPage.tsx
frontend/src/ui/: Badge.tsx  (+11 more)
scripts/: smoke.sh
(+7 files in other folders)
